tests/success/array_rvalue_assign.bz
import resource;

function get_values() -> [1: complex_resource_t]
{
	return [ complex_resource_t() ];
}

function test()
{
	(consteval {
		mut arr = [1: complex_resource_t]();
		arr = get_values();
	});
}
