tests/error/comptime/pointer_difference06.bz
function test()
{
	(consteval {
		let t: [int32, int32];
		(&t[0] + 1) - &t[1];
	});
}
